Replace all List.of() calls with new ArrayList(). Replace all toList() stream calls with Collectors.